--- a/views/partials/alerts.ejs
+++ b/views/partials/alerts.ejs
@@ -6,7 +6,7 @@
     </div>
 <% } %>
 
-<% if (alerts.succes) { %>
+<% if (alerts.success) { %>
     <div class='alert-container success'>
     <% alerts.success.forEach(msg => { %>
         <p class='alert'> <%= msg %> </p>
