--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,6 +11,8 @@
       <nav>
         <ul>
           <% if (currentUser) { %>
+            <li><a href="/">Home Page</li>
+              <li><a href="/food/lunch">Lunch</li>
             <li><a href="/auth/logout">Logout</a></li>
             <li><a href="/profile">Profile</a></li>
             <% } else { %>
