--- a/views/food/lunch.ejs
+++ b/views/food/lunch.ejs
@@ -1,9 +1,10 @@
 <h1>this is my lunch.ejs</h1>
+<h2>Make these ingredients into a lunch to save to your profile</h2>
+
 <ul>
-    <% console.log(food) %>
     <% food.forEach(food => { %>
     <li>
-        description <%= food.dataValues.description %>
+        <%= food.dataValues.description %>
         <form method="POST" action="/food/lunch/<%= food.dataValues.fdcId %>/?_method=DELETE">
             <button type="submit" value="DELETE">Delete From Menu</button>
           </form>
@@ -11,3 +12,29 @@
     <% }) %>
 </ul>
 
+<!-- <script>
+    const lunchForm = document.querySelector("#lunchForm");
+        if(lunchForm) {
+            lunchForm.addEventListener('submit', function(e) {
+                submitForm(e, this);
+            });
+        }
+    
+    async function submitForm(e, form) {
+
+        //1. prevent reloading page
+        e.preventDefault();
+        //2 submit the form
+        
+        //2.1 user interaction
+        const btnSubmit = document.getElementById('btnSubmit');
+        btnSubmit.disabled = true;
+        setTimeout(() => btnSubmit.disabled = false, 2000);
+        //2.2build json body
+        const jsonFormData = buildJsonFormData(form);
+        //2.3build headers
+        
+        //2.4 request & response
+        // const response = await axios
+        //2.5 inform user of result
+    };
