--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,13 @@
 <h2>Profile Page</h2>
 
-<h3>Welcome to your PROFILE <%= currentUser.name %> </h3>
+<h3>Welcome to your PROFILE <%= currentUser.userId %> </h3>
+
+<ul>
+    <% lunch.forEach(lunch => { %>
+    <li><%= lunch.name%></li>
+    <% }); %>
+</ul>
+
+
+
+<!--currentUser.name -->
