--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,11 @@
     <form id="lunchForm" action="/" method="POST">
         <label for="lunch-name">Lunch Name</label>
         <input type="text" name="name">
+        <% if (user) { %>
         <input type="hidden" name="userId" id="userId" value="<%= user.dataValues.id %>">
+            <% } %>
         <input type="submit">
     </form>
-    <%console.log(user.dataValues.id)%>
 </article>
 <main>
     <% food.forEach(function(food) { %>
