--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,12 @@
 <h2>Profile Page</h2>
 
-<h3>Welcome to your PROFILE <%= currentUser.userId %> </h3>
-
+<h3>Welcome to your PROFILE  </h3>
+<%= currentUser.name %>
 <ul>
     <% lunch.forEach(lunch => { %>
     <li><%= lunch.name%></li>
+    <form method="POST" action="/profile/<%= lunch.id %>/?_method=DELETE">
+        <button type="submit" value="DELETE">Delete Lunch</button>
+      </form>
     <% }); %>
 </ul>
-
-
-
-<!--currentUser.name -->
