--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h2>Homepage</h2>
 
-<%= currentUser ? currentUser.name : 'There is no user' %>
+<h2><%= currentUser ? currentUser.name : 'There is no user' %></h2>
 </br>
 <article>
     <form action="food/results" method= "POST">
