--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,10 +3,11 @@
 <h3>Welcome to your PROFILE  </h3>
 <%= currentUser.name %>
 <ul>
-    <% lunch.forEach(lunch => { %>
+    <% lunch.forEach(lunch => { %>     
     <li><%= lunch.name%></li>
-    <form method="POST" action="/profile/<%= lunch.id %>/?_method=DELETE">
-        <button type="submit" value="DELETE">Delete Lunch</button>
+    <form method="POST" action="/profile/<%= lunch.id %>?_method=DELETE">
+        <button type="submit"  value="DELETE">Delete Lunch</button>
       </form>
+     
     <% }); %>
 </ul>
