made lunch page with a dropdown menu of lunches

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -16,6 +16,7 @@
         <ul>
           <% if (currentUser) { %>
             <li><a href="/">Home Page</li>
+              <li><a href="/food/foods">Foods for lunch</li>
               <li><a href="/food/lunch">Lunch</li>
                 <li><a href="/auth/logout">Logout</a></li>
                 <li><a href="/profile">Profile</a></li>
