--- a/views/food/lunch.ejs
+++ b/views/food/lunch.ejs
@@ -1,40 +1,11 @@
-<h1>this is my lunch.ejs</h1>
-<h2>Make these ingredients into a lunch to save to your profile</h2>
-
-<ul>
-    <% food.forEach(food => { %>
-    <li>
-        <%= food.dataValues.description %>
-        <form method="POST" action="/food/lunch/<%= food.dataValues.fdcId %>/?_method=DELETE">
-            <button type="submit" value="DELETE">Delete From Menu</button>
-          </form>
-    </li>
-    <% }) %>
-</ul>
-
-<!-- <script>
-    const lunchForm = document.querySelector("#lunchForm");
-        if(lunchForm) {
-            lunchForm.addEventListener('submit', function(e) {
-                submitForm(e, this);
-            });
-        }
-    
-    async function submitForm(e, form) {
-
-        //1. prevent reloading page
-        e.preventDefault();
-        //2 submit the form
-        
-        //2.1 user interaction
-        const btnSubmit = document.getElementById('btnSubmit');
-        btnSubmit.disabled = true;
-        setTimeout(() => btnSubmit.disabled = false, 2000);
-        //2.2build json body
-        const jsonFormData = buildJsonFormData(form);
-        //2.3build headers
-        
-        //2.4 request & response
-        // const response = await axios
-        //2.5 inform user of result
-    };
+<article>
+    <h1>Which meal do you want to add ingredients to?</h1>
+    <form>
+        <select>
+            <% lunch.forEach(lunch => { %>
+            <option value="<%= lunch.id %>"><%= lunch.name %></option>
+            <% }); %>
+        </select>
+        <input type="submit">
+    </form>
+</article>
