--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,16 +1,16 @@
 <footer>
-    <span class="column left">
-        <bold>Who am I?</bold>
-      <address>
-        My name is: Arthur D'Amato </br>
-        Live in: Seattle, WA </br>
-        Email: mr.arthurdamato@gmail.com
-      </address>
-    </span>
-    <span class="column right">
-        <a href="https://github.com/damatoaj" class="imageLink"><img src="../Images/GitHub-Logo.png"></a>
-      <a href="https://www.linkedin.com/in/arthur-d-amato-45b6b169/" class="imageLink"><img src="../Images/linked_in_logo.svg"></a>
-      <a href="https://www.instagram.com/thundrousprophet/?hl=en" class="imageLink"><img src="../Images/instagram_icon.svg"></a>
-      <a href="https://arthurdamato.wordpress.com/" class="imageLink"><img src="../Images/wordpress_logo.svg"></a>
-    </span>
-  </footer>
+  <span class="column left">
+    <bold style="text-decoration-line:underline">Who am I?</bold>
+    <address>
+      My name is: Arthur D'Amato </br>
+      Live in: Seattle, WA </br>
+      Email: <a href="mailto:mr.arthurdamato@gmail.com" style="color:whitesmoke">mr.arthurdamato@gmail.com</a>
+    </address>
+  </span>
+  <span class="column right">
+    <a href="https://github.com/damatoaj" class="imageLink"><img src="../Images/GitHub-Logo.png"></a>
+    <a href="https://www.linkedin.com/in/arthur-d-amato-45b6b169/" class="imageLink"><img src="../Images/linked_in_logo.svg"/></a>
+    <a href="https://www.instagram.com/thundrousprophet/?hl=en" class="imageLink"><img src="../Images/instagram_icon.svg"/></a>
+    <a href="https://arthurdamato.wordpress.com/" class="imageLink"><img src="../Images/wordpress_logo.svg"></a>
+  </span>
+</footer>
