--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,21 @@
-<h2>Homepage</h2>
+<main id="home">
 </br>
-<article>
-    <form action="food/results" method= "POST">
-        Food Item: <input type="search" name="description">
-        <input type="submit">
-    </form>
-</article>
-<article>
-    <form id="lunchForm" action="/" method="POST">
-        <label for="lunch-name">Lunch Name</label>
-        <input type="text" name="name">
-        <% if (user) { %>
-        <input type="hidden" name="userId" id="userId" value="<%= user.dataValues.id %>">
-            <% } %>
-        <input type="submit">
-    </form>
-</article>
+</br>
+    <h2>Start By Naming Your Recipe, Then Look For Ingredients To Add</h2>
+    <article>
+        <form id="lunchForm" action="/" method="POST">
+            <label for="lunch-name">What Do You Want To Call This Recipe?</label>
+            <input type="text" name="name">
+            <% if (user) { %>
+            <input type="hidden" name="userId" id="userId" value="<%= user.dataValues.id %>">
+                <% } %>
+            <input type="submit">
+        </form>
+    </article>
+    <article>
+        <form action="food/results" method= "POST">
+            Search For An Ingredient To Add To Your Meal: <input type="search" name="description">
+            <input type="submit">
+        </form>
+    </article>
+</main>
