--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <%- include('./partials/alerts.ejs') %>
-    <%- include('./partials/header.ejs') %>
-    <%- body %>
+    <div style="margin-bottom:100px;">
+      <%- include('./partials/alerts.ejs') %>
+      <%- include('./partials/header.ejs') %>
+      <%- body %>
+    </div>
+    </br>
     <%- include('./partials/footer.ejs') %>
   </body>
 </html>
