--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,14 @@
-<h2>Profile Page</h2>
-
-<h3>Welcome to your PROFILE  </h3>
-<%= currentUser.name %>
-<ul>
-    <% lunch.forEach(lunch => { %>     
-    <li><a href="/profile/<%= lunch.id %>"><%= lunch.name%></a></li>
-    <form method="POST" action="/profile/<%= lunch.id %>?_method=DELETE">
-        <button type="submit"  value="DELETE">Delete Lunch</button>
-      </form>
-     
-    <% }); %>
-</ul>
+<main>
+  <h2>Check Out All Of Your Recipes  <%= currentUser.name %>!</h2>
+  <ul class="ejsLi">
+      <% lunch.forEach(lunch => { %>     
+      <li>
+        <h3 style="margin-bottom:10px;"><%= lunch.name%></h3>
+          <a href="/profile/<%= lunch.id %>" id="ingBtn"><button>Check Ingredients</button></a>
+        <form method="POST" action="/profile/<%= lunch.id %>?_method=DELETE">
+          <button type="submit"  value="DELETE">Delete Lunch</button>
+        </form>
+      </li>
+      <% }); %>
+  </ul>
+</main>
