--- a/views/food/foods.ejs
+++ b/views/food/foods.ejs
@@ -1,5 +1,5 @@
-<main>
-    <h2>Use These Ingredients In Your Recipe</h2>
+<h2>Use These Ingredients In Your Recipe</h2>
+<div id="food">
     <ul class="ejsLi">
         <% food.forEach(food => { %>
             <li>
@@ -19,7 +19,7 @@
             </li>
         <% }) %>
     </ul>
-</main>
+</div>
 
     
     
