--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,5 @@
-<main id="home">
-</br>
-</br>
+<div id="home">
+
     <h2>Start By Naming Your Recipe, Then Look For Ingredients To Add</h2>
     <article>
         <form id="lunchForm" action="/" method="POST">
@@ -18,4 +17,4 @@
             <input type="submit">
         </form>
     </article>
-</main>
+</div>
