--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,16 +9,11 @@ body {
   background-attachment: fixed;
 }
 
-main {
-  text-align: center;
-  position: relative;
-  margin-bottom: 50px;
-}
 
 #home {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
-  margin-bottom: 100px;
 }
 a {
   text-decoration: none;
@@ -62,6 +57,7 @@ h3 {
   border-radius: 5px;
   border: 2px solid black;
   margin-bottom: 0;
+  text-align: center;
 }
 form {
   border: 2px solid black;
@@ -115,8 +111,9 @@ footer {
   margin-top: 20px;
   padding: 0;
   bottom: 0;
-  position: fixed;
+  position: relative;
   width: 100%;
+  height: 150px;
 }
 
 header {
@@ -138,8 +135,6 @@ nav {
   justify-content: flex-end;
 }
 main {
-  display:flex;
-  flex-wrap: wrap;
   border-style: 2px solid black;
 }
 
@@ -217,19 +212,16 @@ main {
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
-  margin: 20px, 20px, 20px, 10px;
-  height: 0px;
+  margin: 20px;
+  height: 500px;
 }
 
 .ejsLI {
-  background-color: cornsilk;
-  background-blend-mode: lighten;
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
   margin: 20px, 20px, 20px, 10px;
-  height: 50px;
-  border: 2px solid black;
+  height: 500px;
 }
 #ingBtn {
   border: 2px solid black;
@@ -241,4 +233,20 @@ main {
 
 .nutrientLi {
   padding: 0px;
+  background-color: cornsilk;
+  background-blend-mode: lighten;
+}
+
+#results {
+  max-height: 75%;
+  overflow-y: scroll;
+}
+
+#food {
+  max-height: 70%;
+  overflow-y: scroll;
+}
+
+article {
+  text-align: center;
 }
