--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  height: 800px;
 }
 a {
   text-decoration: none;
